<resources>
    <string name="app_name">projectindoorapp</string>
    <string name="title_activity_map">Project Indoor App</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="selected_project_id">selected_project_id</string>
    <string name="selected_floor_level">selected_floor_level</string>

    <string name="project_name">Project Indoor</string>
    <string name="backend_base_url">https://doblix.de/indoorweb/</string>

    <string name="nav_backend_section">Project Indoor - Backend</string>
    <string name="backend_button_text">Backend</string>

    <string name="nav_github_section">Project Indoor - GitHub</string>
    <string name="github_button_text">GitHub</string>
    <string name="link_github">https://github.com/ProjectIndoor/projectindoorapp</string>

</resources>
